direct list to sr_ru_public_lists.conf

--- a/conf/sr_ru_public_lists.conf
+++ b/conf/sr_ru_public_lists.conf
@@ -79,6 +79,9 @@ IP-CIDR,127.0.0.0/8,DIRECT
 # Ru
 GEOIP,RU,DIRECT
 
+#direct list
+RULE-SET,https://raw.githubusercontent.com/yuriichv/shadowrocket-configuration-file/release/rules/direct.list,DIRECT
+
 # Final
 FINAL,DIRECT
 
